--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.0.0
 amqp==2.3.2
 aniso8601==3.0.2
+backend-Coding-Challenge==1.0
 beautifulsoup4==4.6.3
 billiard==3.5.0.4
 celery==4.2.1
@@ -12,6 +13,7 @@ Flask-Migrate==2.2.1
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 idna==2.7
 itsdangerous==0.24
