--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask==1.0.2
 Flask-Migrate==2.2.1
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
+Flask-SocketIO==3.0.2
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
@@ -25,6 +26,8 @@ psycopg2-binary==2.7.5
 python-dateutil==2.7.3
 python-dotenv==0.9.1
 python-editor==1.0.3
+python-engineio==2.2.0
+python-socketio==2.0.0
 pytz==2018.5
 redis==2.10.6
 requests==2.19.1
